Frontend: added bsg-orange tag and changed, hopefully, all blue things to orange

--- a/tracker/templates/tracker/donationindex.html
+++ b/tracker/templates/tracker/donationindex.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-    <div class="fa-stack center-block medium-icon-blue fa-5x">
+    <div class="fa-stack center-block medium-icon-bsg-orange fa-5x">
         <i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-money fa-stack-1x fa-inverse"></i>
     </div>
 
