--- a/tracker/templates/tracker/runindex.html
+++ b/tracker/templates/tracker/runindex.html
@@ -6,7 +6,7 @@
 {% block title %}{% trans "Run Index" %} &mdash; {{ event.name }}{% endblock %}
 
 {% block content %}
-<div class="fa-stack center-block medium-icon-blue fa-5x">
+<div class="fa-stack center-block medium-icon-bsg-orange fa-5x">
             <i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-gamepad fa-stack-1x fa-inverse"></i>
         </div>
 	<h2 class="text-center">
