--- a/tracker/templates/tracker/bidindex.html
+++ b/tracker/templates/tracker/bidindex.html
@@ -5,7 +5,7 @@
 {% block title %}{% trans "Bid Index" %} &mdash; {{ event.name }}{% endblock %}
 
 {% block content %}
-    <div class="fa-stack center-block medium-icon-bsg-orange fa-5x">
+    <div class="fa-stack center-block medium-icon-blue fa-5x">
         <i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-line-chart fa-stack-1x fa-inverse"></i>
     </div>
 
