--- a/tracker/templates/tracker/index.html
+++ b/tracker/templates/tracker/index.html
@@ -9,6 +9,7 @@
 
 {% block head %}
     <link rel="stylesheet" type="text/css" href="{% static 'main.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'bsg.css' %}" />
 {% endblock %}
 
 {% block content %}
