--- a/tracker/templates/tracker/runindex.html
+++ b/tracker/templates/tracker/runindex.html
@@ -6,7 +6,12 @@
 {% block title %}{% trans "Run Index" %} &mdash; {{ event.name }}{% endblock %}
 
 {% block content %}
-<div class="fa-stack center-block medium-icon-bsg-orange fa-5x">
+
+		{% if settings.MARATHON_ORG != '' %}
+			<div class="fa-stack center-block fa-5x medium-icon-{{settings.MARATHON_ORG}}">
+		{% else %}
+			<div class="fa-stack center-block fa-5x medium-icon-blue">
+		{% endif %}
             <i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-gamepad fa-stack-1x fa-inverse"></i>
         </div>
 	<h2 class="text-center">
@@ -49,7 +54,7 @@
 	{% for run in runs %}
 		<tr class="small">
 			<td>
-				<a href="{% url 'tracker:run' pk=run.pk %}">{{ run.name_with_category }}</a>
+				<a class="link-bsg" href="{% url 'tracker:run' pk=run.pk %}">{{ run.name_with_category }}</a>
 			</td>
 			<td>
         {{ run.runners_text }}
