--- a/tracker/static/bsg.css
+++ b/tracker/static/bsg.css
@@ -1,4 +1,4 @@
-.medium-icon-bsg-orange {
+.medium-icon-bsg {
     color: #cf773b;
 }
 
@@ -16,4 +16,8 @@ h2 {
     color: #fff !important;
     background-color: #cf763bd5 !important;
     border-color: #cf5e13ce !important;
+}
+
+.link-bsg {
+    color: #914e21 !important;
 }
