--- a/tracker/templates/tracker/donorindex.html
+++ b/tracker/templates/tracker/donorindex.html
@@ -7,7 +7,11 @@
 
 {% block content %}
 
-    <div class="fa-stack center-block medium-icon-blue fa-5x">
+    {% if settings.MARATHON_ORG != '' %}
+        <div class="fa-stack center-block fa-5x medium-icon-{{settings.MARATHON_ORG}}">
+    {% else %}
+        <div class="fa-stack center-block fa-5x medium-icon-blue">
+    {% endif %}
         <i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-user fa-stack-1x fa-inverse"></i>
     </div>
 
