Added toggleabe stylesheets and created BSG specific stylesheet (#2)
* Frontend: added seperate bsg stylesheet, put the orange colors in there and changed classes for the relevant buttons/icons

* Backend: added extra setting named 'MARATHON_ORG' to toggle specific stylesheets
Frontend: rewrote classes if statements for improved readability

* Updated readme to include new setting

* Update tracker/templates/tracker/runindex.html

Co-authored-by: Duncan Sterken <contact@duncte123.me>

* Readme: added styling settings to features added and added an extra bit of explanation of what it does and the fallback

* Update tracker/templates/tracker/partials/option.html

Co-authored-by: Duncan Sterken <contact@duncte123.me>

---------

Co-authored-by: Duncan Sterken <contact@duncte123.me>

--- a/tracker/templates/tracker/donationindex.html
+++ b/tracker/templates/tracker/donationindex.html
@@ -8,7 +8,11 @@
 
 {% block content %}
 
-    <div class="fa-stack center-block medium-icon-blue fa-5x">
+    {% if settings.MARATHON_ORG != '' %}
+        <div class="fa-stack center-block fa-5x medium-icon-{{settings.MARATHON_ORG}}">
+    {% else %}
+        <div class="fa-stack center-block fa-5x medium-icon-blue">
+    {% endif %}
         <i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-money fa-stack-1x fa-inverse"></i>
     </div>
 
@@ -55,7 +59,7 @@
                     {{ donation.timereceived|date:"c" }}
                 </td>
                 <td>
-                    <a href="{% url 'tracker:donation' pk=donation.id %}">{{ donation.amount|money }}</a>
+                    <a class="link-{{settings.MARATHON_ORG}}" href="{% url 'tracker:donation' pk=donation.id %}">{{ donation.amount|money }}</a>
                 </td>
                 <td>
                     {{ donation.comment|length|yesno:_("Yes,No") }}
